// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Bounce Report should dispatch a chart refresh action 1`] = `
Array [
  Array [
    Object {
      "from": "2017-02-14T12:02",
      "metrics": "count_bounce",
    },
  ],
]
`;

exports[`Action Creator: Bounce Report should dispatch a chart refresh action 2`] = `
Array [
  Array [
    undefined,
  ],
  Array [
    Array [
      Object {
        "count_bounce": 1,
      },
    ],
  ],
  Array [
    undefined,
  ],
  Array [
    Object {
      "payload": Object {
        "aggregates": undefined,
        "categories": undefined,
        "types": undefined,
      },
      "type": "REFRESH_BOUNCE_CHART",
    },
  ],
]
`;

exports[`Action Creator: Bounce Report should dispatch a table refresh action 1`] = `
Array [
  Array [
    Object {
      "metrics": "count_bounce",
      "other": "stuff",
    },
  ],
]
`;

exports[`Action Creator: Bounce Report should dispatch a table refresh action 2`] = `
Array [
  Array [
    undefined,
  ],
  Array [
    Object {
      "payload": Object {
        "reasons": undefined,
      },
      "type": "REFRESH_BOUNCE_TABLE",
    },
  ],
]
`;

exports[`Action Creator: Bounce Report should not refresh chart nor update bounce classifications if 0 bounces 1`] = `
Array [
  Array [
    Object {
      "from": "2017-02-14T12:02",
      "metrics": "count_bounce",
    },
  ],
]
`;

exports[`Action Creator: Bounce Report should not refresh chart nor update bounce classifications if 0 bounces 2`] = `
Array [
  Array [
    undefined,
  ],
  Array [
    Array [
      Object {
        "foo": "bar",
      },
    ],
  ],
]
`;
